add_library(fe_basic STATIC)

target_sources(fe_basic PRIVATE
  Token.cpp
  Lexer.cpp
  AST.cpp
  AstPrinter.cpp
  AstPrint_Expr.cpp
  AstPrint_Stmt.cpp
  print/Print_Stmt_Control.cpp
  print/Print_Stmt_Jump.cpp
  print/Print_Stmt_Decl.cpp
  print/Print_Stmt_IO.cpp
  AstWalkerUtils.cpp
  Parser.cpp
  Parser_Stmt.cpp
  parse/ParseStmt_Control.cpp
  parse/ParseStmt_IO.cpp
  parse/ParseStmt_Decl.cpp
  Parser_Stmt_Runtime.cpp
  Parser_Expr.cpp
  Parser_Token.cpp
  StatementSequencer.cpp
  NameMangler.cpp
  NameMangler_OOP.cpp
  TypeSuffix.cpp
  TypeRules.cpp
  LoweringContext.cpp
  Lowerer.Program.cpp
  Lowerer.Procedure.cpp
  Lowerer.Statement.cpp
  BuiltinRegistry.cpp
  builtins/MathBuiltins.cpp
  builtins/StringBuiltins.cpp
  Lowerer.cpp
  SelectCaseLowering.cpp
  LowerExprLogical.cpp
  LowerExprNumeric.cpp
  LowerExprBuiltin.cpp
  LowerExpr.cpp
  LowerStmt.cpp
  LowerStmt_Control.cpp
  LowerStmt_IO.cpp
  LowerStmt_Runtime.cpp
  LowerRuntime.cpp
  LowerScan.cpp
  lower/Scan_ExprTypes.cpp
  lower/Scan_RuntimeNeeds.cpp
  Lower_OOP_Scan.cpp
  LowerEmit.cpp
  lower/Emit_Control.cpp
  lower/Emitter.cpp
  lower/Emit_Expr.cpp
  lower/Emit_Builtin.cpp
  lower/Emit_OOP.cpp
  Lower_OOP_Emit.cpp
  SemanticAnalyzer.cpp
  SemanticAnalyzer.Procs.cpp
  SemanticAnalyzer.Stmts.cpp
  SemanticAnalyzer.Stmts.Shared.cpp
  SemanticAnalyzer.Stmts.Control.cpp
  sem/Check_If.cpp
  sem/Check_Loops.cpp
  sem/Check_Jumps.cpp
  sem/Check_Select.cpp
  SemanticAnalyzer.Stmts.IO.cpp
  SemanticAnalyzer.Stmts.Runtime.cpp
  Semantic_OOP.cpp
  SemanticAnalyzer.Exprs.cpp
  SemanticAnalyzer.Builtins.cpp
  ScopeTracker.cpp
  ConstFold_Logic.cpp
  ConstFold_String.cpp
  ConstFold_Arith.cpp
  ConstFolder.cpp
  Intrinsics.cpp
  DiagnosticEmitter.cpp
  BasicCompiler.cpp
  Lower_OOP_Expr.cpp
  Lower_OOP_Stmt.cpp
  ProcRegistry.cpp
  SemanticDiagnostics.cpp
)

target_link_libraries(fe_basic PUBLIC viper_il_full il_build il_runtime)
target_include_directories(fe_basic PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/viper>
)
